--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e9185">  <td>18/11/17 03:40:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@3d34d211]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@270056930</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/17 03:40:21</td>   <td>3508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@3d34d211]">TC01</td> 
-  <td>main@270056930</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/17 03:40:26</td>   <td>8420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@3d34d211]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@270056930</td>   <td></td> </tr>
+<tr bgcolor="b89ecf">  <td>18/11/19 09:28:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@bccb269]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1464555023</td>   <td></td> </tr>
+<tr bgcolor="b89ecf">  <td>18/11/19 09:28:53</td>   <td>4425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@bccb269]">TC01</td> 
+  <td>main@1464555023</td>   <td></td> </tr>
+<tr bgcolor="b89ecf">  <td>18/11/19 09:29:03</td>   <td>14055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@bccb269]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1464555023</td>   <td></td> </tr>
 </table>
