--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>Railway.LoginTest.TC05</td></tr>
+<tr><td>Railway.LoginTest.TC02</td></tr>
+<tr><td>Railway.LoginTest.TC04</td></tr>
+<tr><td>Railway.LoginTest.TC03</td></tr>
 </table>
