--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,34 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:32:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@587e5365]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:32:58</td>   <td>3435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@587e5365]">TC01</td> 
-  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:06</td>   <td>11273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@587e5365]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:06</td>   <td>11851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@587e5365]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:09</td>   <td>14921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@587e5365]">TC02</td> 
-  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:19</td>   <td>24247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@587e5365]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:19</td>   <td>24822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@587e5365]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:22</td>   <td>27887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@587e5365]">TC03</td> 
-  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:29</td>   <td>34959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@587e5365]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:30</td>   <td>35534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@587e5365]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:33</td>   <td>38598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@587e5365]">TC04</td> 
-  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:40</td>   <td>45092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@587e5365]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:40</td>   <td>45671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@587e5365]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:33:43</td>   <td>48808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@587e5365]">TC05</td> 
-  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/19 20:34:04</td>   <td>69438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@587e5365]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
+<tr bgcolor="c0cdad">  <td>18/11/20 13:19:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:Railway.LoginTest@5b94b04d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1190820921</td>   <td></td> </tr>
+<tr bgcolor="c0cdad">  <td>18/11/20 13:19:23</td>   <td>6796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@5b94b04d]">TC01</td> 
+  <td>main@1190820921</td>   <td></td> </tr>
+<tr bgcolor="c0cdad">  <td>18/11/20 13:19:25</td>   <td>8219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:Railway.LoginTest@5b94b04d]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1190820921</td>   <td></td> </tr>
 </table>
