--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b89ecf">  <td>18/11/22 09:50:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:Railway.LoginTest@5c671d7f]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="b89ecf">  <td>18/11/22 09:50:58</td>   <td>7179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@5c671d7f]">TC06</td> 
-  <td>main@355115154</td>   <td></td> </tr>
-<tr bgcolor="b89ecf">  <td>18/11/22 09:51:02</td>   <td>11611</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:Railway.LoginTest@5c671d7f]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 10:18:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:Railway.LoginTest@1f59a598]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 10:19:06</td>   <td>7092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@1f59a598]">TC01</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 10:19:11</td>   <td>12414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@1f59a598]">TC02</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 10:19:13</td>   <td>13789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@1f59a598]">TC03</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 10:19:14</td>   <td>15308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@1f59a598]">TC04</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 10:19:15</td>   <td>16455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@1f59a598]">TC05</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 10:19:19</td>   <td>20730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@1f59a598]">TC06</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 10:19:25</td>   <td>26283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@1f59a598]">TC07</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 10:19:30</td>   <td>31311</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:Railway.LoginTest@1f59a598]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1864869682</td>   <td></td> </tr>
 </table>
