--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e9185">  <td>18/11/22 12:08:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC01</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/22 12:08:51</td>   <td>4032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC02</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/22 12:08:52</td>   <td>5345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC03</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/22 12:08:54</td>   <td>6908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC04</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/22 12:08:55</td>   <td>8008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC05</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/22 12:08:59</td>   <td>11960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC06</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/22 12:09:04</td>   <td>17333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC07</td> 
-  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/22 12:09:10</td>   <td>23002</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:Railway.LoginTest@8c3b9d]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2030036700</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>18/11/22 12:08:40</td>   <td>-6937</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:Railway.LoginTest@8c3b9d]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 13:41:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@1f59a598]">TC01</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 13:42:09</td>   <td>10673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@1f59a598]">TC02</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 13:42:10</td>   <td>12074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@1f59a598]">TC03</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 13:42:12</td>   <td>13558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@1f59a598]">TC04</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 13:42:13</td>   <td>14690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@1f59a598]">TC05</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 13:42:17</td>   <td>18921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@1f59a598]">TC06</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 13:42:22</td>   <td>24339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@1f59a598]">TC07</td> 
+  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 13:42:28</td>   <td>29640</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:Railway.LoginTest@1f59a598]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="bd949d">  <td>18/11/22 13:41:51</td>   <td>-6936</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:Railway.LoginTest@1f59a598]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1864869682</td>   <td></td> </tr>
 </table>
