--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd949d">  <td>18/11/22 13:41:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:Railway.LoginTest@1f59a598]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 13:41:58</td>   <td>6936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@1f59a598]">TC01</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 13:42:09</td>   <td>17609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@1f59a598]">TC02</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 13:42:10</td>   <td>19010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@1f59a598]">TC03</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 13:42:12</td>   <td>20494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@1f59a598]">TC04</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 13:42:13</td>   <td>21626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@1f59a598]">TC05</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 13:42:17</td>   <td>25857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@1f59a598]">TC06</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 13:42:22</td>   <td>31275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@1f59a598]">TC07</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 13:42:28</td>   <td>36576</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:Railway.LoginTest@1f59a598]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="b89ecf">  <td>18/11/23 08:47:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:Railway.LoginTest@5c671d7f]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
+<tr bgcolor="b89ecf">  <td>18/11/23 08:47:50</td>   <td>7044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@5c671d7f]">TC06</td> 
+  <td>main@355115154</td>   <td></td> </tr>
+<tr bgcolor="b89ecf">  <td>18/11/23 08:47:56</td>   <td>13646</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:Railway.LoginTest@5c671d7f]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
 </table>
