--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d76f91">  <td>18/11/26 17:19:36</td>   <td>0</td> <td title="&gt;&gt;TestBase.suiteStart()[pri:0, instance:Railway.RegisterTest@f381794]">&gt;&gt;suiteStart</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171802996</td>   <td></td> </tr>
-<tr bgcolor="d76f91">  <td>18/11/26 17:19:36</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.RegisterTest@f381794]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171802996</td>   <td></td> </tr>
-<tr bgcolor="7ffa75">  <td>18/11/26 17:19:40</td>   <td>4379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC07()[pri:0, instance:Railway.RegisterTest@f381794]">TC07</td> 
-  <td>main@171802996</td>   <td></td> </tr>
-<tr bgcolor="d76f91">  <td>18/11/26 17:19:44</td>   <td>8248</td> <td title="&lt;&lt;TestBase.suiteEnd()[pri:0, instance:Railway.RegisterTest@f381794]">&lt;&lt;suiteEnd</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171802996</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/11/27 16:03:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.LoginTest@76055d02]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1005209486</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 16:03:29</td>   <td>6559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@76055d02]">TC01</td> 
+  <td>main@1005209486</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 16:03:30</td>   <td>7499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@76055d02]">TC02</td> 
+  <td>main@1005209486</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 16:03:30</td>   <td>7946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@76055d02]">TC03</td> 
+  <td>main@1005209486</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 16:03:30</td>   <td>8491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@76055d02]">TC04</td> 
+  <td>main@1005209486</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 16:03:31</td>   <td>8679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@76055d02]">TC05</td> 
+  <td>main@1005209486</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 16:03:32</td>   <td>10370</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@76055d02]">TC06</td> 
+  <td>main@1005209486</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 16:03:33</td>   <td>11396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC08()[pri:0, instance:Railway.LoginTest@76055d02]">TC08</td> 
+  <td>main@1005209486</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 16:03:34</td>   <td>11829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC09()[pri:0, instance:Railway.LoginTest@76055d02]">TC09</td> 
+  <td>main@1005209486</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/11/27 16:03:35</td>   <td>13100</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.LoginTest@76055d02]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1005209486</td>   <td></td> </tr>
 </table>
