--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,5 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>Railway.RegisterTest.TC07<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>User can create new account</i></td></tr>
+<tr><td>Railway.RegisterTest.TC000<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>test</i></td></tr>
 <tr><td>Railway.RegisterTest.TC10<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>User can't create account with 'Confirm password' is not the same with 'Password'</i></td></tr>
 </table>
